# pyinvoicer

./: .bandit  .gitignore  LICENSE  mkdocs.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: master-updated.yaml  python-check.yaml  python-publish.yaml
docs/: README.md  contributing.md
docs/examples/: simple-invoice.yaml
examples/: simple-invoice.yaml
pyinvoicer/: invoice.py  item.py  pyinvoicer.py  renderer.py
pyinvoicer/templates/: invoice.html  styles.css
tasks/: common.py  env.py  test.py
templates/: invoice.html  styles.css
